add test y refactor code
