# app/controllers/api/v1/payments_controller.rb
@@ -3,14 +3,7 @@ class Api::V1::PaymentsController < ApplicationController
   before_action :set_payment, only: [ :show, :update, :destroy ]
 
   def index
-    customers = Customer.includes(:sales, :payments).all
-    render json: customers.map { |c|
-      c.as_json.merge(
-        total_sales: c.sales.sum(&:amount),
-        total_payments: c.payments.sum(&:amount),
-        balance: total_salses - total_payments
-      )
-    }
+    render json: @customer.payments.recent
   end
 
   def show
